added styling class for keyboard

--- a/index.html
+++ b/index.html
@@ -15,42 +15,45 @@
 <body>
     <script src="app.js"></script>
     <div class="keyboard_wrapper">
-    <pre class="display"></pre>
-    <div class="key">
-        <div class="row">
-            <span>q</span>
-            <span>w</span>
-            <span>e</span>
-            <span>r</span>
-            <span>t</span>
-            <span>y</span>
-            <span>u</span>
-            <span>i</span>
-            <span>o</span>
-            <span>p</span>
+        <pre class="display"></pre>
+        <div class="key">
+            <div class="row">
+                <span>q</span>
+                <span>w</span>
+                <span>e</span>
+                <span>r</span>
+                <span>t</span>
+                <span>y</span>
+                <span>u</span>
+                <span>i</span>
+                <span>o</span>
+                <span>p</span>
+            </div>
+            <div class="row">
+                <span>a</span>
+                <span>s</span>
+                <span>d</span>
+                <span>f</span>
+                <span>g</span>
+                <span>h</span>
+                <span>j</span>
+                <span>k</span>
+                <span>l</span>
+            </div>
+            <div class="row">
+                <span>caps</span>
+                <span>z</span>
+                <span>x</span>
+                <span>c</span>
+                <span>v</span>
+                <span>b</span>
+                <span>n</span>
+                <span>m</span>
+                <span><i class="fa fa-angle-left"></i>
+                    <i class="fa fa-close"></i>
+                </span>
+            </div>
         </div>
-        <div class="row">
-            <span>a</span>
-            <span>s</span>
-            <span>d</span>
-            <span>f</span>
-            <span>g</span>
-            <span>h</span>
-            <span>j</span>
-            <span>k</span>
-            <span>l</span>
-        </div>
-        <div class="row">
-            <span>z</span>
-            <span>x</span>
-            <span>c</span>
-            <span>v</span>
-            <span>b</span>
-            <span>n</span>
-            <span>m</span>
-        </div>
-    </div>
     </div>
 </body>
-
 </html>
