added caps lock button for the keyboard

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <span>j</span>
                 <span>k</span>
                 <span>l</span>
+                <span>Caps Lock<span>
             </div>
             <div class="row">
                 <span>caps</span>
