updated buttons for keyboard

--- a/index.html
+++ b/index.html
@@ -14,9 +14,46 @@
 
 <body>
     <script src="app.js"></script>
-    <div class="keyboard_wrapper">
+    <div class="container">
+        <div class="wrapper">
+            <div class="keys">
+                <input type="button" value="q">
+                <input type="button" value="w">
+                <input type="button" value="e">
+                <input type="button" value="r">
+                <input type="button" value="t">
+                <input type="button" value="y">
+                <input type="button" value="u">
+                <input type="button" value="i">
+                <input type="button" value="o">
+                <input type="button" value="p">
+            </div>
+            <div class="keys">
+                <input type="button" value="a">
+                <input type="button" value="s">
+                <input type="button" value="d">
+                <input type="button" value="f">
+                <input type="button" value="g">
+                <input type="button" value="h">
+                <input type="button" value="j">
+                <input type="button" value="k">
+                <input type="button" value="l">
+            </div>
+            <div class="keys">
+                <input type="button" value="q">
+                <input type="button" value="w">
+                <input type="button" value="e">
+                <input type="button" value="r">
+                <input type="button" value="t">
+                <input type="button" value="y">
+                <input type="button" value="u">
+                <input type="button" value="i">
+                <input type="button" value="o">
+                <input type="button" value="p">
+            </div>
+        </div>
         <pre class="display"></pre>
-        <div class="key">
+        <!-- <div class="key">
             <div class="row">
                 <span>q</span>
                 <span>w</span>
@@ -54,7 +91,7 @@
                     <i class="fa fa-close"></i>
                 </span>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
