added changes for layout and button styling

--- a/index.html
+++ b/index.html
@@ -40,58 +40,19 @@
                 <input type="button" value="l">
             </div>
             <div class="keys">
-                <input type="button" value="q">
-                <input type="button" value="w">
-                <input type="button" value="e">
-                <input type="button" value="r">
-                <input type="button" value="t">
-                <input type="button" value="y">
-                <input type="button" value="u">
-                <input type="button" value="i">
-                <input type="button" value="o">
-                <input type="button" value="p">
+                <input type="button" value="z">
+                <input type="button" value="x">
+                <input type="button" value="c">
+                <input type="button" value="v">
+                <input type="button" value="b">
+                <input type="button" value="n">
+                <input type="button" value="m">
+            </div>
+            <div class="keys">
+                <input type="button" value="space">
             </div>
         </div>
         <pre class="display"></pre>
-        <!-- <div class="key">
-            <div class="row">
-                <span>q</span>
-                <span>w</span>
-                <span>e</span>
-                <span>r</span>
-                <span>t</span>
-                <span>y</span>
-                <span>u</span>
-                <span>i</span>
-                <span>o</span>
-                <span>p</span>
-            </div>
-            <div class="row">
-                <span>a</span>
-                <span>s</span>
-                <span>d</span>
-                <span>f</span>
-                <span>g</span>
-                <span>h</span>
-                <span>j</span>
-                <span>k</span>
-                <span>l</span>
-                <span>Caps Lock<span>
-            </div>
-            <div class="row">
-                <span>caps</span>
-                <span>z</span>
-                <span>x</span>
-                <span>c</span>
-                <span>v</span>
-                <span>b</span>
-                <span>n</span>
-                <span>m</span>
-                <span><i class="fa fa-angle-left"></i>
-                    <i class="fa fa-close"></i>
-                </span>
-            </div>
-        </div> -->
     </div>
 </body>
 </html>
